# wasm-game-of-life

./: .gitignore  Cargo.toml  LICENSE_MIT  bundle.js  index.js  package-lock.json  package.json  raw.ts  rollup.config.js  wasm.js
assets/: wasm-game-of-life-5072bece.wasm  wasm-game-of-life-b5c0cb35.wasm
node/: bundle.js  go.wasm  index.js  package-lock.json  package.json  rollup.config.js  tinygo.go  tsconfig.json  webpack.config.js
src/: lib.rs  main.rs  render_module.rs
