[package]
authors = ["chenyitao <chenyitao@zhuanzhuan.com>"]
edition = "2018"
name = "wasm-game-of-life"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.3.1"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
web-sys = {version = "0.3", features = ["console"]}
lazy_static = "1.4.0"

console_error_panic_hook = {version = "0.1.6", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
